# minecraft-ai

./: .env.example  .gitignore  QUICKSTART.md  README.md  setup.sh  spec.yaml
agent/: pyproject.toml
agent/src/mcagent/: __init__.py  benchmark.py  bridge_client.py  capture.py  cli.py  config.py  loop.py  policy.py  protocol.py
docker/: docker-compose.yml  vllm.Dockerfile
minecraft-mod/: build.gradle  gradle.properties
minecraft-mod/src/client/java/me/coffeeboy/: ActionApplier.java  AgentConfig.java  AgentController.java  AgentHud.java  DebugFrameBuffer.java  FrameCapture.java  LLMClient.java  MinecraftAIClient.java  Protocol.java  WsServer.java
minecraft-mod/src/client/java/me/coffeeboy/mixin/client/: ExampleClientMixin.java
minecraft-mod/src/client/resources/: minecraftai.client.mixins.json
minecraft-mod/src/main/java/me/coffeeboy/: MinecraftAI.java
minecraft-mod/src/main/java/me/coffeeboy/mixin/: ExampleMixin.java
minecraft-mod/src/main/resources/: fabric.mod.json  modid.mixins.json
